# SCN

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/source/: conf.py  index.rst  welcome.rst
docs/source/_ext/: github_link.py
docs/source/_templates/: custom-class-template.rst  custom-module-template.rst
docs/source/play/: 3D_plots.rst  Autoencoder.rst  EINetwork.rst  EINetwork2.rst  Optim.rst  Rate_space.rst  SinglePopulation.rst  play.rst
docs/source/plug/: plug.rst
docs/source/references/: index.rst
docs/source/references/_autosummary/: SCN.autoencoder.Autoencoder.rst  SCN.autoencoder.rst  SCN.low_rank_LIF.Low_rank_LIF.rst  SCN.low_rank_LIF.rst  SCN.rst  SCN.simulation.Simulation.rst  SCN.simulation.rst  SCN.utils_neuro._deintegrate.rst  SCN.utils_neuro._integrate.rst  SCN.utils_neuro._neurons_spiked_between.rst  SCN.utils_neuro._s_from_stimes.rst  SCN.utils_neuro._stimes_from_s.rst  SCN.utils_neuro.rst  SCN.utils_plots._gradient_line.rst  SCN.utils_plots._line_closest_point.rst  (+2 more)
src/SCN/: Autoencoder.py  Low_rank_LIF.py  Simulation.py  __init__.py  autoencoder.py  boundary.py  ei_network.py  low_rank_LIF.py  plot.py  simulation.py  single_population.py  transform.py  utils_neuro.py  utils_plots.py
tests/pretty/: test_pretty_autoencoder.py  test_pretty_autoencoder_3D.py  test_pretty_autoencoder_optim.py  test_pretty_autoencoder_rate.py  test_pretty_ei_network.py  test_pretty_ei_network_2.py  test_pretty_single_population.py
tests/tests/: test_autoencoder.py  test_ei_network.py
